# Oatmeal

./: .gitignore  README.md  makefile  pytest.ini  requirements.txt  setup.py
C/c_libs/: cmake_clean.cmake
C/include/: gaussians.h
Dev/: (CS)_UHF_dev.py  1_mo_coefficients_in_He.ipynb  2_1_mp2.ipynb  2_2_noise_buildup.ipynb  2_3_fock_matrix_MO.ipynb  2_3_qz_test.ipynb  3_RMP2_basis_tests.ipynb  4_1_qchem_He_test.ipynb  4_2_Qchem_MP2.ipynb  CROP.py  CSMP2_dev.py  CSRHF.py  CSRHF_dev.py  CSUHF.py  CSUHF_dev.py  CS_CROP.py  DIIS.py  Discrepancy.py  Error_concept.py  LR-formulation.py  LR._diagnostics.py  LR_diagnostics.py  LR_diagnostics.txt  On_biorthogonality.ipynb  Qchem_MP2.ipynb  UHF_classification.ipynb  UMP2_test.py  diagonalization.py  fock_matrix_MO.ipynb  li.py  mo_coefficients_in_He.ipynb  mp2.ipynb  mp2_test.py  naive_MP2.py  noise_buildup.ipynb  on_mo_coefficients.ipynb  undiag_mat
Notebooks/: sto3g_test.ipynb
dev/: CSUHF_dev.py
docs/: Features, Design, issues, limitations and future prospects.md  References.md  Results.md  Tutorial.md
include/: gaussians.h  special_functions.h
notebooks/: 1_RHF_CSRHF.ipynb  2_Qchem_CSRHF_results.ipynb  3_UHF_examples.ipynb  CS-RUHF-test.ipynb  CSRHF_results.ipynb  On_biorthogonality.ipynb  Qchem_CSRHF_results.ipynb  RHF_CSRHF.ipynb  la.ipynb  sto3g_test.ipynb
py/src/: RHF.py  (+4 more)
py_mods/c_libs/: CMakeLists.txt  gaussians.c  gaussians.h  scf_utils.c  scf_utils.h  special_functions.c  special_functions.h
src/: program.c
tests/: RHF_test.py  run_tests.c  test_H.c  test_cartesian_gaussian.c  test_special_functions.c
(+191 files in other folders)
